# autowebprompt

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  x_post_drafts.md
src/autowebprompt/: __init__.py
src/autowebprompt/agents/: __init__.py  base.py  chatgpt.py  claude.py
src/autowebprompt/browser/: __init__.py  manager.py
src/autowebprompt/cli/: __init__.py  db.py  main.py  wizard.py
src/autowebprompt/config/: __init__.py  loader.py
src/autowebprompt/config/templates/: example_tasks.yaml  template_chatgpt.yaml  template_claude.yaml
src/autowebprompt/engine/: __init__.py  batch.py  completion_logger.py  runner.py
src/autowebprompt/storage/: __init__.py  models.py  neon.py  schema.py  uploader.py
src/autowebprompt/validators/: __init__.py  excel.py
tests/: test_base_agent.py  test_browser_manager.py  test_cli.py  test_config_loader.py  test_db_cli.py  test_neon_client.py  test_schema.py  test_validators.py
